Fixed Dispose() behavior.
There was a bug where if you called ForceDisconnect or Dispose in the IRC client that the program would infinitely hang waiting for the ready thread to stop.

--- a/TwitchNet.csproj
+++ b/TwitchNet.csproj
@@ -87,7 +87,7 @@
     <Compile Include="Clients\Irc\Twitch\RoomStateType.cs" />
     <Compile Include="Clients\Irc\Twitch\BadgeType.cs" />
     <Compile Include="Rest\Api\StatusHandling.cs" />
-    <Compile Include="Rest\Api\Videos\BroadcasterLanguage.cs" />
+    <Compile Include="BroadcasterLanguage.cs" />
     <Compile Include="Rest\Api\Streams\StreamLanguage.cs" />
     <Compile Include="Rest\Api\Streams\StreamType.cs" />
     <Compile Include="Rest\Api\Users\BroadcasterType.cs" />
