Intial support for extending paging functionality.
Intial support for extending paging functionality. More EnumUtil work. Don't use this build, not everything is working/fully implemented.

--- a/TwitchNet.csproj
+++ b/TwitchNet.csproj
@@ -56,7 +56,13 @@
     <Compile Include="Debugger\DebugLevel.cs" />
     <Compile Include="Debugger\ErrorLevel.cs" />
     <Compile Include="Debugger\TimeStamp.cs" />
-    <Compile Include="Helpers\Json\EnumCacheConverter.cs" />
+    <Compile Include="Helpers\Json\EnumConverter.cs" />
+    <Compile Include="Rest\Api\Analytics\DateRange.cs" />
+    <Compile Include="Rest\Api\Analytics\GameAnalyticsQueryParameters.cs" />
+    <Compile Include="Rest\Api\Analytics\GameAnalytics.cs" />
+    <Compile Include="Rest\Api\Analytics\ExtensionAnalyticsQueryParameters.cs" />
+    <Compile Include="Rest\Api\Analytics\ExtensionAnalytics.cs" />
+    <Compile Include="Rest\Api\Analytics\GameAnalyticsType.cs" />
     <Compile Include="Rest\Api\TwitchApi.Sync.cs" />
     <Compile Include="Rest\Api\TwitchApi.Async.cs" />
     <Compile Include="Rest\Api\TwitchApiOAuth.Sync.cs" />
@@ -71,8 +77,12 @@
     <Compile Include="Debugger\ValidateObjectAttribute.cs" />
     <Compile Include="Debugger\ValidateMemberAttribute.cs" />
     <Compile Include="Rest\Api\Entitlements\EntitlementType.cs" />
+    <Compile Include="Rest\SeparateValuesListFormatter.cs" />
+    <Compile Include="Rest\SpaceSeparatedListFormatter.cs" />
     <Compile Include="Rest\OAuth\Token\RefreshTokenQueryParameters.cs" />
-    <Compile Include="Rest\QueryParameterType.cs" />
+    <Compile Include="Rest\QueryParameterFormatter.cs" />
+    <Compile Include="Rest\CommaSeparatedListFormatter.cs" />
+    <Compile Include="Rest\SingleValueFormatter.cs" />
     <Compile Include="Rest\Scopes.cs" />
     <Compile Include="Clients\ClientState.cs" />
     <Compile Include="Clients\Irc\Twitch\CommercialLength.cs" />
