--- a/TwitchNet.csproj
+++ b/TwitchNet.csproj
@@ -77,12 +77,14 @@
     <Compile Include="Debugger\ValidateObjectAttribute.cs" />
     <Compile Include="Debugger\ValidateMemberAttribute.cs" />
     <Compile Include="Rest\Api\Entitlements\EntitlementType.cs" />
-    <Compile Include="Rest\SeparateValuesListFormatter.cs" />
-    <Compile Include="Rest\SpaceSeparatedListFormatter.cs" />
+    <Compile Include="Rest\CommaDelineatedQueryFormatter.cs" />
+    <Compile Include="Rest\RFC3339QueryFormatter.cs" />
+    <Compile Include="Rest\SpaceDelineatedQueryFormatter.cs" />
+    <Compile Include="Rest\SeparateQueryFormatter.cs" />
+    <Compile Include="Rest\DelineatedQueryFormatter.cs" />
     <Compile Include="Rest\OAuth\Token\RefreshTokenQueryParameters.cs" />
     <Compile Include="Rest\QueryParameterFormatter.cs" />
-    <Compile Include="Rest\CommaSeparatedListFormatter.cs" />
-    <Compile Include="Rest\SingleValueFormatter.cs" />
+    <Compile Include="Rest\ValueTypeQueryFormatter.cs" />
     <Compile Include="Rest\Scopes.cs" />
     <Compile Include="Clients\ClientState.cs" />
     <Compile Include="Clients\Irc\Twitch\CommercialLength.cs" />
