Rest parameters work
The parameters classes used in the API now support query strings and request bodies. The properties in the API parameter classes are now virtual to give an easy way to extend functionalty.

--- a/TwitchNet.csproj
+++ b/TwitchNet.csproj
@@ -57,13 +57,14 @@
     <Compile Include="Debugger\ErrorLevel.cs" />
     <Compile Include="Debugger\TimeStamp.cs" />
     <Compile Include="Helpers\Json\EnumConverter.cs" />
+    <Compile Include="Helpers\Json\JsonSerializer.cs" />
     <Compile Include="Rest\Api\Bits\BitsLeaderboardData.cs" />
     <Compile Include="Rest\Api\Bits\BitsLeaderboardPeriod.cs" />
-    <Compile Include="Rest\Api\Bits\BitsLeaderboardQueryParameters.cs" />
+    <Compile Include="Rest\Api\Bits\BitsLeaderboardParameters.cs" />
     <Compile Include="Rest\Api\DateRange.cs" />
-    <Compile Include="Rest\Api\Analytics\GameAnalyticsQueryParameters.cs" />
+    <Compile Include="Rest\Api\Analytics\GameAnalyticsParameters.cs" />
     <Compile Include="Rest\Api\Analytics\GameAnalytics.cs" />
-    <Compile Include="Rest\Api\Analytics\ExtensionAnalyticsQueryParameters.cs" />
+    <Compile Include="Rest\Api\Analytics\ExtensionAnalyticsParameters.cs" />
     <Compile Include="Rest\Api\Analytics\ExtensionAnalytics.cs" />
     <Compile Include="Rest\Api\Analytics\GameAnalyticsType.cs" />
     <Compile Include="Rest\Api\Bits\BitsUser.cs" />
@@ -82,19 +83,23 @@
     <Compile Include="Debugger\ValidateMemberAttribute.cs" />
     <Compile Include="Rest\Api\Entitlements\EntitlementType.cs" />
     <Compile Include="Rest\Api\Users\ActiveExtensionsData.cs" />
+    <Compile Include="Rest\Api\Users\UpdateExtensionsParameters.cs" />
     <Compile Include="Rest\Api\Users\ActiveExtensionsTypes.cs" />
     <Compile Include="Rest\Api\Users\ActiveExtension.cs" />
     <Compile Include="Rest\Api\Users\ExtensionType.cs" />
     <Compile Include="Rest\Api\Users\Extension.cs" />
-    <Compile Include="Rest\Api\Users\ActiveExtensionsQueryParameters.cs" />
-    <Compile Include="Rest\CommaDelineatedQueryFormatter.cs" />
-    <Compile Include="Rest\RFC3339QueryFormatter.cs" />
-    <Compile Include="Rest\SpaceDelineatedQueryFormatter.cs" />
-    <Compile Include="Rest\SeparateQueryFormatter.cs" />
-    <Compile Include="Rest\DelineatedQueryFormatter.cs" />
+    <Compile Include="Rest\Api\Users\ActiveExtensionsParameters.cs" />
+    <Compile Include="Rest\CommaDelineatedQueryConverter.cs" />
+    <Compile Include="Rest\DefaultBodyConverter.cs" />
+    <Compile Include="Rest\RequestBodyAttribute.cs" />
+    <Compile Include="Rest\RestParameterAttribute.cs" />
+    <Compile Include="Rest\RFC3339QueryConverter.cs" />
+    <Compile Include="Rest\SpaceDelineatedQueryConverter.cs" />
+    <Compile Include="Rest\SeparateQueryConverter.cs" />
+    <Compile Include="Rest\DelineatedQueryConverter.cs" />
     <Compile Include="Rest\OAuth\Token\RefreshTokenQueryParameters.cs" />
-    <Compile Include="Rest\QueryParameterFormatter.cs" />
-    <Compile Include="Rest\ValueTypeQueryFormatter.cs" />
+    <Compile Include="Rest\RestParameterConverter.cs" />
+    <Compile Include="Rest\DefaultQueryConverter.cs" />
     <Compile Include="Rest\Scopes.cs" />
     <Compile Include="Clients\ClientState.cs" />
     <Compile Include="Clients\Irc\Twitch\CommercialLength.cs" />
@@ -194,14 +199,14 @@
     <Compile Include="Rest\OAuth\OAuthResponse.cs" />
     <Compile Include="Rest\ClientHandler.cs" />
     <Compile Include="Rest\ClientInfo.cs" />
-    <Compile Include="Rest\Api\Clips\ClipCreationQueryParameters.cs" />
+    <Compile Include="Rest\Api\Clips\ClipCreationParameters.cs" />
     <Compile Include="Rest\Api\Clips\CreatedClip.cs" />
     <Compile Include="Rest\Api\Clips\Clip.cs" />
-    <Compile Include="Rest\Api\Clips\ClipQueryParameters.cs" />
+    <Compile Include="Rest\Api\Clips\ClipParameters.cs" />
     <Compile Include="Rest\Api\Entitlements\Url.cs" />
     <Compile Include="Rest\Api\DataPage.cs" />
     <Compile Include="Rest\Api\Data.cs" />
-    <Compile Include="Rest\Api\Games\TopGamesQueryParameters.cs" />
+    <Compile Include="Rest\Api\Games\TopGamesParameters.cs" />
     <Compile Include="Rest\Api\HelixInfo.cs" />
     <Compile Include="Rest\RestException.cs" />
     <Compile Include="Rest\StatusCodeSettings.cs" />
@@ -215,14 +220,14 @@
     <Compile Include="Rest\Api\Users\FollowsDataPage.cs" />
     <Compile Include="Rest\Api\Users\FollowsData.cs" />
     <Compile Include="Rest\Api\Videos\Video.cs" />
-    <Compile Include="Rest\Api\Entitlements\EntitlementQueryParameters.cs" />
+    <Compile Include="Rest\Api\Entitlements\EntitlementParameters.cs" />
     <Compile Include="Helpers\ClampedNumber.cs" />
-    <Compile Include="Rest\Api\Games\GamesQueryParameters.cs" />
+    <Compile Include="Rest\Api\Games\GamesParameters.cs" />
     <Compile Include="Rest\Api\HelixQueryParameters.cs" />
     <Compile Include="Helpers\ClampedList.cs" />
     <Compile Include="Rest\QueryParameterAttribute.cs" />
-    <Compile Include="Rest\Api\Streams\StreamsQueryParameters.cs" />
-    <Compile Include="Rest\Api\Users\FollowsQueryParameters.cs" />
+    <Compile Include="Rest\Api\Streams\StreamsParameters.cs" />
+    <Compile Include="Rest\Api\Users\FollowsParameters.cs" />
     <Compile Include="Rest\Api\IHelixResponse.cs" />
     <Compile Include="Rest\Api\Pagination.cs" />
     <Compile Include="Rest\RestError.cs" />
@@ -232,8 +237,8 @@
     <Compile Include="Rest\Api\Users\User.cs" />
     <Compile Include="Rest\RateLimit.cs" />
     <Compile Include="Rest\RequestSettings.cs" />
-    <Compile Include="Rest\Api\Users\UsersQueryParameters.cs" />
-    <Compile Include="Rest\Api\Videos\VideosQueryParameters.cs" />
+    <Compile Include="Rest\Api\Users\UsersParameters.cs" />
+    <Compile Include="Rest\Api\Videos\VideosParameters.cs" />
     <Compile Include="Clients\Irc\IrcMessage.cs" />
     <Compile Include="Clients\Irc\IrcUser.cs" />
     <Compile Include="Debugger\ValidateTagAttribute.cs" />
