Fixed a retry bug.
An error used to be thrown when the sdame request message instance was attempeted to be sent more than once. The requets message is now cloned to a new instance to avoid this error. Retrying requests now work properly.

--- a/TwitchNet.csproj
+++ b/TwitchNet.csproj
@@ -227,7 +227,7 @@
     <Compile Include="Rest\Api\Users\Follow.cs" />
     <Compile Include="Rest\Api\Users\User.cs" />
     <Compile Include="Rest\RateLimit.cs" />
-    <Compile Include="Rest\HelixRequestSettings.cs" />
+    <Compile Include="Rest\Api\HelixRequestSettings.cs" />
     <Compile Include="Rest\Api\Users\UsersParameters.cs" />
     <Compile Include="Rest\Api\Videos\VideosParameters.cs" />
     <Compile Include="Clients\Irc\IrcMessage.cs" />
