--- a/TwitchNet.csproj
+++ b/TwitchNet.csproj
@@ -85,9 +85,10 @@
     <Compile Include="Debugger\ValidateObjectAttribute.cs" />
     <Compile Include="Debugger\ValidateMemberAttribute.cs" />
     <Compile Include="Rest\Api\Entitlements\EntitlementType.cs" />
-    <Compile Include="Rest\Api\Users\ActiveExtensionsData.cs" />
+    <Compile Include="Rest\Api\Users\ActiveExtensions.cs" />
+    <Compile Include="Rest\Api\Users\DuplicateExtensionException.cs" />
     <Compile Include="Rest\Api\Users\UpdateExtensionsParameters.cs" />
-    <Compile Include="Rest\Api\Users\ActiveExtensionsTypes.cs" />
+    <Compile Include="Rest\Api\Users\ActiveExtensionsData.cs" />
     <Compile Include="Rest\Api\Users\ActiveExtension.cs" />
     <Compile Include="Rest\Api\Users\ExtensionType.cs" />
     <Compile Include="Rest\Api\Users\Extension.cs" />
